improved get workoutsbyuserid query
